<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.engdiary.mureng.ui.main.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.MainActivity">


        <FrameLayout
            android:id="@+id/fl_main"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/view_main_line"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <View
            android:id="@+id/view_main_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorWhiteGray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/cl_main_bottom"/>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_main_bottom"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_main_home"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/cl_main_social"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:onSingleClick="@{vm::homeClick}">

                <ImageView
                    android:id="@+id/img_main_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:src="@drawable/icons_writing"
                    app:layout_constraintVertical_bias="0.2"
                    android:src="@{vm.selectHome ? @drawable/icons_home_selected : @drawable/icons_home}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home"
                    android:textColor="@{vm.selectHome ? @color/colorPinkfc : @color/colorGrayaf}"
                    android:textSize="12dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/img_main_home"
                    tools:text="@string/home" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_main_social"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/cl_main_writing"
                app:layout_constraintStart_toEndOf="@id/cl_main_home"
                app:layout_constraintTop_toTopOf="parent"
                app:onSingleClick="@{vm::SocialClick}">

                <ImageView
                    android:id="@+id/img_main_social"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintVertical_bias="0.2"
                    android:src="@{vm.selectSocial ? @drawable/icons_social_selected : @drawable/icons_social}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/social"
                    android:textColor="@{vm.selectSocial ? @color/colorPinkfc : @color/colorGrayaf}"
                    android:textSize="12dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/img_main_social"
                    tools:text="@string/social" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_main_writing"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/cl_main_my_page"
                app:layout_constraintStart_toEndOf="@id/cl_main_social"
                app:layout_constraintTop_toTopOf="parent"
                app:onSingleClick="@{vm::WritingClick}">

                <ImageView
                    android:id="@+id/img_main_writing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintVertical_bias="0.2"
                    android:src="@{vm.selectWriting ? @drawable/icons_writing : @drawable/icons_writing}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/writing"
                    android:textColor="@{vm.selectWriting ? @color/colorGrayaf : @color/colorGrayaf}"
                    android:textSize="12dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/img_main_writing"
                    tools:text="@string/writing" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_main_my_page"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cl_main_writing"
                app:layout_constraintTop_toTopOf="parent"
                app:onSingleClick="@{vm::MypageClick}">

                <ImageView
                    android:id="@+id/img_main_my_page"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintVertical_bias="0.2"
                    android:src="@{vm.selectMyPage ? @drawable/icons_mypage_selected : @drawable/icons_mypage}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my"
                    android:textColor="@{vm.selectMyPage ? @color/colorPinkfc : @color/colorGrayaf}"
                    android:textSize="12dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/img_main_my_page"
                    tools:text="MY" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
